--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -1045,7 +1045,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="preferences__pref_enter_sends_title">Tipka \'Naprej\' pošlje</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Pritisk na tipko \'Naprej\' pošlje sporočilo</string>
   <string name="preferences__send_link_previews">Pošiljanje povezav s predogledom</string>
-  <string name="preferences__previews_are_supported_for">Predogled je na voljo za povezave na Imgur, Instagram, Reddit in YouTube</string>
+  <string name="preferences__previews_are_supported_for">Predogled je na voljo za povezave na Imgur, Instagram, Pinterest, Reddit in YouTube</string>
   <string name="preferences__choose_identity">Izberi identiteto</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Na sezmanu stikov izberite svojo lastno vizitko.</string>
   <string name="preferences__change_passphrase">Zamenjaj geslo</string>
