--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -85,7 +85,7 @@
   <!--CommunicationActions-->
   <string name="CommunicationActions_no_browser_found">Heb ganfod porwr gwe.</string>
   <!--ConfirmIdentityDialog-->
-  <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Mae\'ch rhif diogelwch gyda %1$s wedi newid. Gall hyn olygu bod rhywun yn ceisio ymyrryd a\'ch cyfathrebu, neu bod % ​2$s wedi cael ei ail-osod.</string>
+  <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Mae\'ch rhif diogelwch gyda %1$s wedi newid. Gall hyn olygu bod rhywun yn ceisio ymyrryd a\'ch cyfathrebu, neu bod %2$s wedi cael ei ail-osod.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Efallai yr hoffech wirio\'ch rhif diogelwch gyda\'r cyswllt hwn.</string>
   <string name="ConfirmIdentityDialog_accept">Derbyn</string>
   <!--ContactsCursorLoader-->
@@ -868,10 +868,10 @@ Send neges heb ei ddiogelu?</string>
   <!--unverified safety numbers-->
   <string name="IdentityUtil_unverified_banner_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid ac nid yw wedi\'i dilysu bellach.</string>
   <string name="IdentityUtil_unverified_banner_two">Nid yw eich rhif diogelwch gyda %1$s a %2$s wedi\'i dilysu bellach</string>
-  <string name="IdentityUtil_unverified_banner_many">Nid yw eich rhifau diogelwch gyda %1$s,%2$s, a %3$s bellach yn cael eu gwirio</string>
-  <string name="IdentityUtil_unverified_dialog_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid ac nid yw wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod %​1$s wedi ail-osod Signal.</string>
-  <string name="IdentityUtil_unverified_dialog_two">Nid yw eich rhif diogelwch gyda %1$s wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod %​1$s wedi ail-osod Signal.</string>
-  <string name="IdentityUtil_unverified_dialog_many">Nid yw eich rhifau diogelwch gyda %1$s, %2$s, a %3$s bellach yn cael eu gwirio. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod %​1$s wedi ail-osod Signal.</string>
+  <string name="IdentityUtil_unverified_banner_many">Nid yw eich rhifau diogelwch gyda %1$s, %2$s, a %3$s bellach yn cael eu gwirio</string>
+  <string name="IdentityUtil_unverified_dialog_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid ac nid yw wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod %1$s wedi ail-osod Signal.</string>
+  <string name="IdentityUtil_unverified_dialog_two">Mae\'ch rhifau diogelwch gyda %1$s a %2$s wedi\'i dilysu bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod nhw wedi ail-osod Signal.</string>
+  <string name="IdentityUtil_unverified_dialog_many">Mae\'ch rhifau diogelwch gyda %1$s, %2$s, a %3$s wedi\'i dilysi bellach. Gall hyn olygu bod rhywun yn ceisio rhyng-gipio eich cyfathrebu, neu bod nhw wedi ail-osod Signal.</string>
   <string name="IdentityUtil_untrusted_dialog_one">Mae\'ch rhif diogelwch gyda %1$s wedi newid yn ddiweddar.</string>
   <string name="IdentityUtil_untrusted_dialog_two">Mae\'ch rhif diogelwch gyda %1$s wedi newid yn ddiweddar.</string>
   <string name="IdentityUtil_untrusted_dialog_many">Mae\'ch rhif diogelwch gyda %1$s a %3$s wedi newid.</string>
