--- a/res/values-eo/strings.xml
+++ b/res/values-eo/strings.xml
@@ -740,6 +740,7 @@ Ricevis mesaĝon pri interŝanĝo de ŝlosiloj por nevalida protokola versio.
   <string name="conversation_activity__type_message_sms_insecure">Nesekura SMS</string>
   <string name="conversation_activity__type_message_mms_insecure">Nesekura MMS</string>
   <string name="conversation_activity__from_sim_name">El %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Sendi</string>
   <string name="conversation_activity__compose_description">Mesaĝa redakto</string>
   <string name="conversation_activity__emoji_toggle_description">Baskuligi emoĝian klavaron</string>
