--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -738,6 +738,7 @@ Ricevuto un messaggio di scambio chiavi per una versione di protocollo non valid
   <string name="conversation_activity__type_message_sms_insecure">SMS non sicuro</string>
   <string name="conversation_activity__type_message_mms_insecure">MMS non sicuro</string>
   <string name="conversation_activity__from_sim_name">Da %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Invia</string>
   <string name="conversation_activity__compose_description">Composizione messaggio</string>
   <string name="conversation_activity__emoji_toggle_description">Dis/attiva la tastiera emoji</string>
