--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -783,6 +783,7 @@
   <string name="conversation_activity__type_message_sms_insecure">Neapsaugota SMS</string>
   <string name="conversation_activity__type_message_mms_insecure">Neapsaugota MMS</string>
   <string name="conversation_activity__from_sim_name">Nuo %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Siųsti</string>
   <string name="conversation_activity__compose_description">Žinutės rašymas</string>
   <string name="conversation_activity__emoji_toggle_description">Perjungti jaustukų klaviatūrą</string>
