--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -777,6 +777,7 @@
   <string name="conversation_activity__type_message_sms_insecure">Незащищённое SMS</string>
   <string name="conversation_activity__type_message_mms_insecure">Незащищённое MMS</string>
   <string name="conversation_activity__from_sim_name">Через %1$s</string>
+  <string name="conversation_activity__sim_n">SIM %1$d</string>
   <string name="conversation_activity__send">Отправить</string>
   <string name="conversation_activity__compose_description">Написание сообщения</string>
   <string name="conversation_activity__emoji_toggle_description">Клавиатура смайликов</string>
@@ -1048,6 +1049,7 @@
   <string name="preferences__pref_enter_sends_title">Отправка клавишей «Ввод»</string>
   <string name="preferences__pressing_the_enter_key_will_send_text_messages">Нажатие клавиши ввода будет отправлять текстовые сообщения</string>
   <string name="preferences__send_link_previews">Отправлять предпросмотр ссылки</string>
+  <string name="preferences__previews_are_supported_for">Предварительный просмотр поддерживается для ссылок Imgur, Instagram, Pinterest, Reddit и YouTube.</string>
   <string name="preferences__choose_identity">Выберите личность</string>
   <string name="preferences__choose_your_contact_entry_from_the_contacts_list">Выберите себя из списка контактов.</string>
   <string name="preferences__change_passphrase">Изменить парольную фразу</string>
